--- a/app/views/blog_posts/edit.html.erb
+++ b/app/views/blog_posts/edit.html.erb
@@ -1,5 +1,7 @@
 <h1>Edit post</h1>
 <%= @blog_post.title %>
 <%= render partial: "form", locals:{blog_post: @blog_post} %>
+<%= button_to "Delete", blog_path(@blog_post), method: :delete, data: {turbo_confirm: "Are you sure?"}%>
+
 
 
